# cevg

./: .gitignore  CMakeLists.txt  PROJECT_GUIDE.md  README.md  cevg.exported_symbols  cevg.version  pack.ps1  test_baseline.c
code/plume/docs/api/: plume_widgets.md
code/plume/include/plume/: plume_ui_gen.h
code/plume/schema/: plume.schema.json
code/plume/src/dsl/: pl_ui_gen.c
code/plume/src/schema/: plume_schema_gen.c  plume_schema_gen.h
code/plume/src/widgets/: pl_notification.c  pl_text.c
common/: cevg_common.c  cevg_internal.h
docs/: skia-m150-porting-pitfalls.md
include/cevg/: cevg.h
src/: cevg_skia_graphite.cpp
tests/: CMakeLists.txt  cevg_test_harness.c  cevg_test_harness.h  cevg_test_harness_cpu.c  stb_image_write_impl.c  test_cevg_overlap.c  test_cevg_render.c  test_text_measure.c  test_util.h  vulkan_setup.c  vulkan_setup.h
third/glad/: GLAD_VULKAN_README.txt
third/glad/include/glad/: vulkan.h
third/glad/include/vulkan/: vulkan.h  vulkan_core.h  vulkan_win32.h
third/glad/src/: vulkan.c
third/skia/: CMakeLists.txt  SkSLSPIRVValidator_stub.cpp  cleanup_skia.py
third/skia/skia-m150/modules/skshaper/src/: SkShaper.cpp  SkShaper_harfbuzz.cpp
third/skia/skia-m150/modules/skunicode/src/: SkUnicode_icu.cpp
third/skia/skia-m150/src/gpu/ganesh/d3d/: GrD3DBackendSurface.cpp
third/skia/third/icu/: CMakeLists.txt  SkLoadICU.cpp
